--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
         "@inertiajs/inertia-vue3": "^0.5.2",
         "@inertiajs/progress": "^0.2.6",
         "@vueform/multiselect": "^2.4.2",
+        "bootstrap-vue": "^2.22.0",
         "moment": "^2.29.3",
         "vue": "^3.2.24"
     }
