--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,6 @@
-APP_NAME=Laravel
+APP_NAME=cimaUp-api
 APP_ENV=local
-APP_KEY=
+APP_KEY=base64:rnuH9R/VxWhsMzm6HLFJWjuw5Bjg/GL82RFUlVayVdY=
 APP_DEBUG=true
 APP_URL=http://localhost
 
